playground/assets/dxp.css
/* Variables and their common uses */
:root {
  /* Light Theme */
  --dxp-bg-light-darker: white;
  --dxp-bg-light: white;
  --dxp-bg-light-lighter: white;
  /* --dxp-bg-light-darker: #C1C6D2; */
  /* --dxp-bg-light: #DCDFE5;
  --dxp-bg-light-lighter: #EDEFF2; */
  --dxp-bg-light-lighter-alt: #D6DAE1;

  --dxp-border-light: #b4b4b4;
  --dxp-border-light-lighter: #dbdbdc;
  /* --dxp-border-light: #15181E;
  --dxp-border-light-lighter: #242933; */

  --dxp-text-light: #131313;
  /* --dxp-text-light: #131313; */

  --dxp-log-info-light: #002fff;
  --dxp-log-warn-light: #ff8400;
  --dxp-log-error-light: #ff0000;

  /* Dark Theme */
  --dxp-bg-dark-darker: #21252E;
  --dxp-bg-dark: #2B303B;
  --dxp-bg-dark-lighter: #454E61;
  --dxp-bg-dark-lighter-alt: #363E4D;

  --dxp-border-dark: #5B667D;
  --dxp-border-dark-lighter: #8292B2;

  --dxp-text-dark: white;
  /* --dxp-text-dark: #dfdfdf; */

  --dxp-log-info-dark: #4fa2f0;
  --dxp-log-warn-dark: #f0b04f;
  --dxp-log-error-dark: #f04f4f;

  /* Both Themes */
  --dxp-log-border: #374155;
}

#dxp-playground-root {
  border-top: 1px solid var(--dxp-border-light);
  border-bottom: 1px solid var(--dxp-border-light);
  border-left: 1px solid var(--dxp-border-light);
  overflow: hidden;
}

#dxp-root {
  display: flex;
  flex-direction: column;
}

/* Header */
#dxp-header {
  border-bottom: 1px solid var(--dxp-border-light);
  background-color: var(--dxp-bg-light-darker);
  height: 32px;
  display: flex;
  flex-direction: row;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

#dxp-header-left {
  flex-grow: 1;
  display: flex;
  flex-direction: row;
  align-items: center;
}

#dxp-header-left-divider {
  flex-grow: 1;
}

#dxp-header-right {
  flex-grow: 1;
  min-width: 100px;
  display: flex;
  flex-direction: row;
  justify-content: end;
  align-items: center;
  padding: 2px;
}


/* Header buttons */
.dxp-ctrl-btn {
  height: 25px;
  padding: 0px 10px;
  border-radius: 5px;
  border-style: none;
  color: var(--dxp-text-light);
  font-family: "Inter", sans-serif;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: -0.06em;
  transition: background-color 0.2s ease;
}
.dxp-menu-btn {
  background-color: var(--dxp-bg-light);
  border: 1px solid var(--dxp-border-light-lighter);
  padding: 0px 5px 0px 5px;
}
.dxp-menu-open {
  background-color: var(--dxp-bg-light-lighter);
}

.dxp-ctrl-btn:hover,
#dxp-examples-btn:hover {
  cursor: pointer;
  background-color: var(--dxp-bg-light-lighter-alt);
}

#dxp-header-left>.dxp-ctrl-btn {
  margin-left: 12px;
}

#dxp-header-right>.dxp-ctrl-btn {
  margin-right: 12px;
}

#dxp-run-btn {
  background-color: var(--dxp-bg-light-lighter);
  color: var(--dxp-text-light);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-items: start;
  font-family: "Inter", sans-serif;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: -0.06em;
}

#dxp-run-btn:not(.disabled) {
  background-color: #288AE5;
  color: var(--dxp-text-dark);
}

#dxp-run-btn.disabled:hover {
  cursor: not-allowed;
}

#dxp-run-btn:hover:not(.disabled) {
  background-color: #1E68AD;
}

#dxp-run-btn>svg {
  color: var(--dxp-text-light);
  height: 16px;
  position: relative;
  left: -5px;
}

/* Examples button and dropdown */
#dxp-examples-btn-container {
  /* margin-left: 12px; */
}

#dxp-examples-btn {
  background-color: var(--dxp-bg-light-lighter);
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 100px;
}

#dxp-examples-btn.disabled:hover {
  cursor: not-allowed;
}

#dxp-examples-btn.dxp-open {
  border: 1px solid var(--dxp-border-light-lighter);
}

#dxp-examples-btn>svg {
  color: var(--dxp-text-light);
  margin-left: 5px;
  transition: transform 0.2s ease;
}

#dxp-examples-btn.dxp-open>svg {
  transform: rotate(-180deg);
}

#dxp-examples-dropdown {
  display: flex;
  position: absolute;
  flex-direction: column;
  z-index: 10;
  margin-top: 6px;
  min-width: 100px;
  background-color: var(--dxp-bg-light-lighter);
  border-radius: 3px;
  border: 1px solid var(--dxp-border-light-lighter);
}

#dxp-examples-dropdown>button {
  width: 100%;
  height: 25px;
  padding: 0px 12px;
  border: none;
  background-color: transparent;
  color: var(--dxp-text-light);
  text-align: left;
  font-family: "Inter", sans-serif;
  transition: background-color 0.2s ease;
}

#dxp-examples-dropdown>button:hover {
  cursor: pointer;
  background-color: var(--dxp-bg-light-darker);
}

#dxp-examples-dropdown>button:not(:last-child) {
  border-bottom: 1px solid var(--dxp-border-light);
}


.dxp-file-btn {
  min-width: 100px;
  background-color: var(--dxp-bg-light-lighter);
}

.dxp-selected-file {
  border: 1px solid var(--dxp-border-light-lighter);
}

#dxp-share-btn {
  background-color: transparent;
}

#dxp-share-btn:hover {
  text-decoration: underline;
}

#dxp-examples-list {
  width: 200px;
  padding: 5px;
  display: none;
  border-right: 1px solid var(--dxp-border-light);
}

#dxp-examples-list.dxp-open {
  display: block;
}

.dxp-example-project {
  border: none;
  background: inherit;
  text-align: left;
  cursor: pointer;
  width: 100%;
  padding: 0;
  margin: 0;
}
.dxp-example-project:hover {
  background-color: var(--dxp-bg-light-lighter-alt);
}

#dxp-lower-half {
  display: flex;
  flex-grow: 1;
}

/* Panes */
#dxp-panes {
  /* width: 100%; */
  flex-grow: 1;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: row;
  /* border-bottom-left-radius: 5px; */
  /* border-bottom-right-radius: 5px; */

  /* border-bottom: 1px solid var(--dxp-border-light); */
  /* border-right: 1px solid var(--dxp-border-light); */
}

#dxp-panes-left {
  width: 50%;
  min-width: 100px;
  background-color: var(--dxp-bg-light);
  /* border-bottom-left-radius: 5px; */
}

#dxp-panes-draggable {
  width: 3px;
  background-color: var(--dxp-border-light);
  cursor: col-resize;
  user-select: none;
}
/* ... */

